# snapvault

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
django_recovery/: apps.py  conf.py  restic.py  services.py
django_recovery/backends/: azure.py  gcs.py  generic.py  local.py  s3.py  sftp.py
django_recovery/connectors/: sqlite.py
django_recovery/management/commands/: recovery.py
docs/: commands.md  configuration.md  databases.md  faq.md  how-it-works.md  index.md  installation.md  scheduling.md
docs/stylesheets/: extra.css
tests/: test_commands.py  test_conf.py  test_connectors.py  test_integration.py  test_restic_wrapper.py  test_services.py
